# PostmolodostBot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  manage.py  mypy.ini  pyproject.toml  retriever.py  supervisord.conf
content/: admin.py  models.py
content/management/commands/: run_bot.py
content/migrations/: 0001_initial.py
faq/: admin.py  models.py  retriever.py  serializers.py  urls.py  views.py
faq/management/commands/: run_bot.py  test_retriever.py
faq/migrations/: 0001_initial.py  0002_alter_faq_options_startmessage.py
postmolodost_bot/: asgi.py  settings.py  urls.py  wsgi.py
