[project]
name = "postmolodostbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Fedor Spiridonov"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "python-telegram-bot (>=22.1,<23.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "scikit-learn (>=1.4.2,<2.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
]
